Fixed answer submit font size, made Dark mode default

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     text-align: center;
     margin: 40px 0px;
     font-family: 'Major Mono Display', monospace;
-    color: white;
+    color: #dbdbdb;
 }
 
 button {
@@ -12,17 +12,22 @@ button {
 }
 #startButton, #stopButton {
     background-color: transparent;
-    border-color: #fff;
-    border: 2px solid white;
+    border-color: #dbdbdb;
+    border: 2px solid #dbdbdb;
     padding: 10px 40px;
     font-size: 30px;
 }
 
 #breakTime {
-    color: white;
+    color: #dbdbdb;
     text-align: center;
     margin-top: 40px;
     font-size: 60px;
+}
+
+#answerSubmit {
+    color: #dbdbdb;
+    margin: 30px 10px;
 }
 
 
@@ -34,10 +39,10 @@ button {
 .question {
     margin-top: 40px;
     margin-bottom: 0px;
-    color: white;
+    color: #dbdbdb;
 }
 select {
-    border: 1px solid #fff;
+    border: 1px solid #dbdbdb;
     background-color: rgba(255,255,255,.5);
     padding: 5px;
 }
@@ -45,51 +50,9 @@ select {
 body {
 	width: 100wh;
 	height: 90vh;
-	color: #fff;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-	background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+	color: #dbdbdb;
+	background-color: #1f1a24 !important;
 }
-
-@-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-@keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
-
 
 .prompt input {
     width: 50%;
@@ -98,8 +61,8 @@ body {
     display: block;
     background: 0;
     border: 0;
-    border-bottom: 2px solid #fff;
-    color: #fff;
+    border-bottom: 2px solid #dbdbdb;
+    color: #dbdbdb;
     font-weight: 500;
     font-size: 60px;
     outline: 0;
